data/derived/comb/progs/unify/prog3193.ml.out
Characters 212-216:
  let (_, res) = List.fold_left f base args in
                                       ^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type ('c list * 'd list) list
